Bug 1032654 - Remove invalid assertion from HTML parser. r=smaug